# csc14005-introduction-to-machine-learning

./: .gitignore  README.md
lab-1/: .gitignore  main.py  pyproject.toml
lab-1/code/: README.md  config.py  requirements.txt
lab-1/code/Part1_Regression/: basis.py  diagnostics.py  eda.py  eval.py  experiments.py  notebook.ipynb  preprocessing.py  tuning.py  utils.py
lab-1/data/: README.md
lab-1/report/: README.md
lab-2/: .gitignore  README.md  pyproject.toml  requirements.txt
lab-2/code/: README.md  __init__.py  main.py  pyproject.toml
lab-2/code/data/: README.md  __init__.py  load_data.py
lab-2/code/experiments/: __init__.py  baseline.ipynb  contrastive_learning.ipynb  report_pca_kpca_isomap.py  utils.py
lab-2/code/models/: __init__.py  base.py  isomap.py  kpca.py  laplacian_eigen.py  lle.py  neg_tsne.py  pca.py  t_sne.py  umap.py
lab-2/code/utils/: __init__.py  knn_graph.py  viz.py
lab-2/docs/: INSTALL.md
lab-2/report/: README.md  main.tex  references.bib
lab-2/report/appendix/: appendix.tex
lab-2/report/content/: conclusion.tex  experiment_analysis.tex  fundamental.tex  introduction.tex  method.tex  preamble.tex  related_research.tex  research_directions.tex  title.tex
lab-2/report/ref/: ref.bib  ref.tex
lab-2/scripts/: clean_artifacts.ps1  compile_latex.ps1  recompile.ps1
lab-3/: .gitignore  README.md  main.py  pyproject.toml
lab-3/data-mining/: .gitignore  README.md  create_notebooks.py  plan.md  pyproject.toml  requirements.txt
lab-3/data-mining/notebooks/: 01_synthetic.ipynb  02_eeg_cp.ipynb  03_parafac2.ipynb  04_cmtf.ipynb
lab-3/data-mining/src/: __init__.py  cp_als.py  cp_opt.py  data.py  evaluate.py  parafac2.py  visualize.py
lab-3/deep-learning/: README.md  pyproject.toml
lab-3/deep-learning/configs/: frozen.yaml  full_finetune.yaml  lora_r2.yaml  lora_r4.yaml  lora_r8.yaml
lab-3/deep-learning/notebooks/: 01_baseline.ipynb  02_lora_sweep.ipynb  03_lora_diagnostics.ipynb  04_visualize.ipynb
lab-3/deep-learning/src/: __init__.py  config.py  data.py  evaluate.py  lora.py  model.py  train.py  utils.py  visualize.py
lab-3/deep-learning/test/: smoke_test.py
lab-3/docs/: README.md
lab-3/probabilistic-circuit/: PLAN.md  README.md  demo.ipynb  pyproject.toml
lab-3/report/: hcmus-report-template.sty  main.tex
lab-3/scripts/: README.md  clear_artifacts.ps1  compile_report.ps1  compile_slide.ps1
lab-3/slide/: README.md  main.tex
(+59 files in other folders)
