[project]
name = "lab-2"
version = "0.1.0"
description = "Dimensionality Reduction"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.0",
    "numpy>=2.4.4",
    "scipy>=1.17.1",
    "scikit-learn>=1.8.0",
    "matplotlib>=3.8",
    "h5py>=3.16.0",
    "ipykernel>=7.2.0",
    "contrastive-ne",
    "umap-learn>=0.5.12",
]

[project.optional-dependencies]
data = ["scanpy>=1.12.1", "pillow>=12.2.0"]

[tool.uv.sources]
contrastive-ne = { path = "external/contrastive-ne", editable = true }
