[project]
name = "deep-learning"
version = "0.1.0"
description = "LoRA rank sweep demo for the Deep Learning part of Foundations of Tensor Computations for AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.20.0,<5",
    "matplotlib>=3.8.0",
    "pandas>=2.2.0",
    "pyyaml>=6.0.0",
    "scikit-learn>=1.4.0",
    "sentencepiece>=0.2.0",
    "tiktoken>=0.7.0",
    "torch>=2.3.0",
    "tqdm>=4.66.0",
    "transformers>=4.42.0,<5",
]
